output-goal-docker.txt
Fri Apr 14 14:05:31 UTC 2023
Linux LinuxMachine 5.15.49-linuxkit #1 SMP PREEMPT Tue Sep 13 07:51:32 UTC 2022 aarch64 aarch64 aarch64 GNU/Linux
uid=1000(cssuwbstudent) gid=1000(cssuwbstudent) groups=1000(cssuwbstudent),10(wheel)
=====================================================
1. Compiles without warnings with -Wall -Wextra flags
=====================================================
=====================================================
2. Runs and produces correct output
=====================================================
test1 complete
test2 complete
test3 complete
test4 complete
Error: Cannot access front for empty Pokedex
Error: Cannot access back for empty Pokedex
Error: Cannot access element at 3
Error: Cannot access element at -9
Error: Cannot erase element at 5
Error: Cannot erase element at -10
Error: Cannot pop_back for empty Pokedex
Error: Cannot access element at 6
Error: Cannot erase element at 2
test5 complete
Done.
=====================================================
3. clang-tidy warnings are fixed
=====================================================
12507 warnings generated.
23989 warnings generated.
/home/cssuwbstudent/pisan/bitbucket/pisan342/ass1-pokedex-solution/main.cpp:80:11: error: 9 is a magic number; consider replacing it with a named constant [readability-magic-numbers,-warnings-as-errors]
  pdx.at(-9);
          ^
/home/cssuwbstudent/pisan/bitbucket/pisan342/ass1-pokedex-solution/main.cpp:81:13: error: 5 is a magic number; consider replacing it with a named constant [readability-magic-numbers,-warnings-as-errors]
  pdx.erase(5);
            ^
/home/cssuwbstudent/pisan/bitbucket/pisan342/ass1-pokedex-solution/main.cpp:82:14: error: 10 is a magic number; consider replacing it with a named constant [readability-magic-numbers,-warnings-as-errors]
  pdx.erase(-10);
             ^
/home/cssuwbstudent/pisan/bitbucket/pisan342/ass1-pokedex-solution/main.cpp:84:10: error: the 'empty' method should be used to check for emptiness instead of 'size' [readability-container-size-empty,-warnings-as-errors]
  assert(pdx.size() == 0);
         ^~~~~~~~~~~~~~~
         pdx.empty()
/usr/include/assert.h:90:27: note: expanded from macro 'assert'
     (static_cast <bool> (expr)                                         \
                          ^
/home/cssuwbstudent/pisan/bitbucket/pisan342/ass1-pokedex-solution/pokedex.h:32:8: note: method 'Pokedex'::empty() defined here
  bool empty() const;
       ^
/home/cssuwbstudent/pisan/bitbucket/pisan342/ass1-pokedex-solution/main.cpp:86:10: error: 6 is a magic number; consider replacing it with a named constant [readability-magic-numbers,-warnings-as-errors]
  pdx.at(6);
         ^
/home/cssuwbstudent/pisan/bitbucket/pisan342/ass1-pokedex-solution/main.cpp:90:10: error: the 'empty' method should be used to check for emptiness instead of 'size' [readability-container-size-empty,-warnings-as-errors]
  assert(pdx.size() == 0);
         ^~~~~~~~~~~~~~~
         pdx.empty()
/usr/include/assert.h:90:27: note: expanded from macro 'assert'
     (static_cast <bool> (expr)                                         \
                          ^
/home/cssuwbstudent/pisan/bitbucket/pisan342/ass1-pokedex-solution/pokedex.h:32:8: note: method 'Pokedex'::empty() defined here
  bool empty() const;
       ^
Suppressed 23984 warnings (23983 in non-user code, 1 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
6 warnings treated as errors
=====================================================
4. clang-format does not find any formatting issues
=====================================================
Running clang-format on ./main.cpp
Running clang-format on ./pokedex.cpp
=====================================================
5. No memory leaks using g++
=====================================================
=====================================================
6. No memory leaks using valgrind, look for "definitely lost" 
=====================================================
==13119== Memcheck, a memory error detector
==13119== Copyright (C) 2002-2022, and GNU GPL'd, by Julian Seward et al.
==13119== Using Valgrind-3.19.0 and LibVEX; rerun with -h for copyright info
==13119== Command: ./a.out test-1.txt test-2.txt test-3.txt
==13119== Parent PID: 13024
==13119== 
==13119== 
==13119== HEAP SUMMARY:
==13119==     in use at exit: 0 bytes in 0 blocks
==13119==   total heap usage: 7 allocs, 7 frees, 77,921 bytes allocated
==13119== 
==13119== All heap blocks were freed -- no leaks are possible
==13119== 
==13119== For lists of detected and suppressed errors, rerun with: -s
==13119== ERROR SUMMARY: 0 errors from 0 contexts (suppressed: 0 from 0)
...
Fri Apr 14 14:05:35 UTC 2023
=====================================================
To create an output.txt file with all the output from this script
Run the below command
      ./create-output.sh > output.txt 2>&1 
=====================================================
